--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -52,9 +52,7 @@ rules:
   import/no-extraneous-dependencies: 0
   import/prefer-default-export: 0
   object-curly-newline: 0
-  operator-linebreak:
-    - 2
-    - after
+  operator-linebreak: 0
 
   react/jsx-filename-extension: 0
   react/jsx-one-expression-per-line: 0
@@ -65,6 +63,8 @@ rules:
   react/destructuring-assignment: 0
 
   react-hooks/rules-of-hooks: error
+  linebreak-style: 0
+
 
 globals:
   document: true
