--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
+    "@babel/core": "^7.4.5",
+    "core-js": "^2.6.5",
     "gatsby": "^2.0.76",
     "gatsby-awesome-pagination": "^0.3.3",
     "gatsby-image": "^2.0.20",
